feat: add controller action to get user credits list
