# app/Http/Controllers/CreditController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers;
 
 use Illuminate\Http\Request;
 use App\Http\Resources\CreditResource;
+use App\Http\Resources\CreditCollection;
 use Infrastructure\Abstracts\ControllerAbstract;
 use Infrastructure\Repositories\CreditRepositoryInterface;
 
@@ -43,5 +44,14 @@ class CreditController extends ControllerAbstract
         $amount = $this->repository->getUserCreditAmount($request->input('mobile'));
 
         return ['amount' => $amount];
+    }
+
+    protected function getUserCredits(Request $request)
+    {
+        $result = $this->repository->getUserCredits($request->input('mobile'));
+
+        return (new CreditCollection($result['results']))->additional(
+            ['totalCount' => $result['totalCount']]
+        );
     }
 }
